--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
+    "serve-static": "^1.14.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
